* Added a pregnancy potion (Gestarium)
 - Available through the usual item debug for now, plus some drop tables
 - It can also be bought from Asche
 - To be specific, what this does is push an already started pregnancy. It won't make you pregnant
* Adjusted the zebra shaman's drop table. Mistakenly put all the alchemy drops on the brave's drop table
* New patreon sponsored scene by Del. It's a one-off encounter with Lei
 - You need to know his name
 - Go to the slums/residential area and search between 22-5 at night
* Added a new loss scene for cats, written by The Observer
 - You need to be lactating (a few Bovia or Gestarium potions should do it)
* Removed Kyna from the game (no longer available even in debug)

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4l
------------
* Added Halloween content. You can access it either by playing during the time period 14 oct-14 nov, or by enabling debug
 - Go to the Nomad camp between 8-22 and you should get a one-time scene to start things off
 - After the one-time, the option "Pumpkin Pie" should be available to you between 17-22. The option is only available during the season or in debug
 - Each "playthrough" resets the event state, so you can test out multiple paths
* Fixed a bug regarding companions in Lei's task
* Layla has a new sex scene written by QB/LD. You need a cock/toy to trigger it
* Restructured the "Entity" class and split it up into multiple files. This shouldn't cause wierdness, but report if it does

Version 0.4k
------------
* Asche's magic box now counts toward purchases for tasks
* Added quest log entries for Vaughn's second and third task
* Added Lei's first task + reward (you need to have talked to him about bodyguarding and offered first to get the sexy reward)
* Added a sparring option to Lei. He's quite tough
* Did some body format restructuring, making the code more structured