@@ -16,6 +16,8 @@ Version 0.4m
  - Available through the usual item debug for now, plus some drop tables
  - It can also be bought from Asche
  - To be specific, what this does is push an already started pregnancy. It won't make you pregnant
+* Added the items Anusol and Anusol+
+ - Can currently be gotten through debug
 * Adjusted the zebra shaman's drop table. Mistakenly put all the alchemy drops on the brave's drop table
 * New patreon sponsored scene by Del. It's a one-off encounter with Lei
  - You need to know his name
